--- a/assessment.html
+++ b/assessment.html
@@ -7,7 +7,7 @@
 <meta property="og:title" content="あなたのいいところ診断">
 <meta property="og:description" content="ZEN Studyプログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。">
     <link rel="stylesheet" href="assessment.css">
-    <title>あなたのいいところ診断</title>
+    <title>あなたのユーザ名が作ったあなたのいいところ診断</title>
   </head>
   <body>
     <h1>あなたのいいところは?</h1>
